--- a/views/users/mainLayout/mainFooter.ejs
+++ b/views/users/mainLayout/mainFooter.ejs
@@ -134,9 +134,7 @@
 			</div>
 
 			<p class="stext-107 cl6 txt-center">
-				<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | Made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a> &amp; distributed by <a href="https://themewagon.com" target="_blank">ThemeWagon</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+			
 
 			</p>
 		</div>
@@ -253,7 +251,20 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 <!--===============================================================================================-->
 	<script src="/static/userAssets/js/main.js"></script>
 	<script src="/static/userAssets/js/script.js"></script>
-	<!-- <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.18/dist/sweetalert2.all.min.js"></script> -->
+
+
+<!-- ==================================================================================checkOut======================================================== -->
+
+	 <!-- Plugins JS File -->
+	 <!-- <script src="/static/userAssets/another/assets/js/jquery.min.js"></script>
+	 <script src="/static/userAssets/another/assets/js/bootstrap.bundle.min.js"></script>
+	 <script src="/static/userAssets/another/assets/js/jquery.hoverIntent.min.js"></script>
+	 <script src="/static/userAssets/another/assets/js/jquery.waypoints.min.js"></script>
+	 <script src="/static/userAssets/another/assets/js/superfish.min.js"></script>
+	 <script src="/static/userAssets/another/assets/js/owl.carousel.min.js"></script> -->
+	 <!-- Main JS File -->
+	 <!-- <script src="/static/userAssets/another/assets/js/main.js"></script> -->
+	
 
 
 
