--- a/views/users/profile.ejs
+++ b/views/users/profile.ejs
@@ -96,23 +96,58 @@
                                 <!-- </div> -->
                             </div><!-- .End .tab-pane -->
                         <div class="tab-pane fade" id="tab-address" role="tabpanel" aria-labelledby="tab-address-link">
+                            
+
                             <a href="/address">
                                 <div class="card col-md-5 col-10 m-2 shadow-sm" id="addressDiv"
-                                        style="border-radius: 7px; background: #F3F3F9; cursor: pointer;">
-                                        <div class="card-body">
+                                        style="border-radius: 7px; background: #F3F3F9; cursor: pointer;  height: 86px;">
+                                        <div class="card-body" style="height: 190px;">
                                             <div class="d-flex justify-content-center mt-1 py-4">
-                                                <i class="fa-solid fa-map-location-dot mx-3" style="font-size: 35px;"></i>
-                                                <h5 class="m-0 align-self-center" style="font-weight: 300;">Your Addresses</h5>
+                                                <i class="fa-solid fa-plus" style="color: #000000;"></i>
+                                                <h5 class="m-0 align-self-center" style="font-weight: 300;">Add New Address</h5>
                                             </div>
                                         </div>
                                     </div>
                             </a>
+                                 
+                            <div class="row">
+                           <%if(address){%>
+                           <% for(let i=0;i<address.addresses.length;i++){%>
+                                <div class="card  m-2 col-md-3 col-10 p-4" style="background: #F3F3F9; border-radius: 10px; width: 208px">
+                                    <div class="card-body ">
+                                        <h6 class="card-title" style="font-size: 15px;">
+                                            <%=address.addresses[i].fullName%>
+                                        </h6>
+                                        <p class="card-text">
+                                            <%=address.addresses[i].city%>, <%=address.addresses[i].state%>
+                                        </p>
+                                        <p class="card-text"> Number : <%=address.addresses[i].mobile%>
+                                        </p>
+                                        <p class="card-text">Pincode : <%=address.addresses[i].pincode%>, <%=address.addresses[i].country%>
+                                        </p>
+                                        <hr class="m-0 p-0 my-3">
+                                        <div class="d-flex justify-content-end ">
+                                           <a href="/editAddress?id=<%= address.addresses[i]._id %>"> <button class="text-dark" type="button" id="editBTN" data-bs-toggle="modal" data-bs-target="">Edit </button></a>
+                                            <p class="mx-3" style="margin-top: 10px;">|</p>
+                                            <a href="#"><button class="text-danger" type="button"   data-bs-toggle="modal" data-bs-target="">Remove</button></a>
+                                            
+                                        </div>
+                                    </div>
+                                </div>
+                                
+                            <%}%>
+                           <%}else{%>
 
-                            <div>
-                                hallo
-                            </div>
+                          <% } %>
+                        </div>
+
+                            
+                        
                             
                         </div>
+
+
+                        
                             <div class="tab-pane fade" id="tab-account" role="tabpanel" aria-labelledby="tab-account-link">
                                 <h6 class="text-center fs-1 font-monospace text-decoration-underline">Edit Details</h6>
                                 <form action="/updateUser" method="post">
