added checkout page and add multiple address in there

--- a/views/users/mainLayout/mainFooter.ejs
+++ b/views/users/mainLayout/mainFooter.ejs
@@ -256,14 +256,14 @@
 <!-- ==================================================================================checkOut======================================================== -->
 
 	 <!-- Plugins JS File -->
-	 <!-- <script src="/static/userAssets/another/assets/js/jquery.min.js"></script>
-	 <script src="/static/userAssets/another/assets/js/bootstrap.bundle.min.js"></script>
-	 <script src="/static/userAssets/another/assets/js/jquery.hoverIntent.min.js"></script>
-	 <script src="/static/userAssets/another/assets/js/jquery.waypoints.min.js"></script>
-	 <script src="/static/userAssets/another/assets/js/superfish.min.js"></script>
-	 <script src="/static/userAssets/another/assets/js/owl.carousel.min.js"></script> -->
+	 <script src="/static/userAssets/another/js/jquery.min.js"></script>
+	 <script src="/static/userAssets/another/js/bootstrap.bundle.min.js"></script>
+	 <script src="/static/userAssets/another/js/jquery.hoverIntent.min.js"></script>
+	 <script src="/static/userAssets/another/js/jquery.waypoints.min.js"></script>
+	 <script src="/static/userAssets/another/js/superfish.min.js"></script>
+	 <script src="/static/userAssets/another/js/owl.carousel.min.js"></script>
 	 <!-- Main JS File -->
-	 <!-- <script src="/static/userAssets/another/assets/js/main.js"></script> -->
+	 <script src="/static/userAssets/another/assets/js/main.js"></script>
 	
 
 
