--- a/views/users/cart.ejs
+++ b/views/users/cart.ejs
@@ -105,7 +105,7 @@
                                 </form>
                             </div>
 
-                            <a href="#" class="btn btn-outline-dark-2"><span>UPDATE CART</span><i class="icon-refresh"></i></a>
+                            <a href="#" class="btn btn-outline-dark-2"><span>UPDATE CART</span><i class="fa  icon-refresh"></i></a>
                         </div>
                     </div>
                     <aside class="col-lg-3">
