--- a/views/users/editAddress.ejs
+++ b/views/users/editAddress.ejs
@@ -65,6 +65,7 @@
                             </div>
     
                             <button type="submit">Update</button>
+                            <input type="hidden" name="id" value="<%=addresses._id%>">
                         </div>
     
                     </div>
