--- a/views/users/mainLayout/mainHeader.ejs
+++ b/views/users/mainLayout/mainHeader.ejs
@@ -10,6 +10,7 @@
 	<link rel="stylesheet" type="text/css" href="/static/userAssets/vendor/bootstrap/css/bootstrap.min.css">
 <!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="/static/userAssets/fonts/font-awesome-4.7.0/css/font-awesome.min.css">
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
 <!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="/static/userAssets/fonts/iconic/css/material-design-iconic-font.min.css">
 <!--===============================================================================================-->
@@ -40,7 +41,7 @@
 
 
 	
-
+    <link rel="stylesheet" href="/static/userAssets/another/bootstrap.min.css">
 	<link rel="stylesheet" href="/static/userAssets/another/style.css">
 	
 
