--- a/views/users/orderPayment.ejs
+++ b/views/users/orderPayment.ejs
@@ -42,8 +42,8 @@
                                                     Number:
                                                     <b style="color: #043a6c;">
                                                         <span class="material-symbols-outlined"
-                                                            style="font-size: 13px;">smartphone</span>
-                                                        <%= address.mobileNumber %>
+                                                            style="font-size: 13px;"><%= address.mobileNumber %></span>
+                                                        
                                                     </b>
                                         </p>
                                         <p>
